@@ -1,8 +1,8 @@
 source = {
-  dir = "lyaml-release-v1",
-  url = "http://github.com/gvvaughan/lyaml/archive/release-v1.zip",
+  dir = "lyaml-release-v2",
+  url = "http://github.com/gvvaughan/lyaml/archive/release-v2.zip",
 }
-version = "1-1"
+version = "2-1"
 external_dependencies = {
   YAML = {
     library = "yaml",
@@ -14,7 +14,7 @@ dependencies = {
 }
 description = {
   homepage = "http://github.com/gvvaughan/lyaml/",
-  license = "GPLv3+",
+  license = "MIT",
   summary = "libYAML binding for Lua",
   detailed = "      Read and write YAML format files with Lua.\
      ",
